--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">EssentialAllInOne</string>
+    <string name="app_name">NewAllInOne</string>
     <string name="round">2</string>
 </resources>
